--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-VITE_API_URL=http://localhost:3001/
-TMDB_IMAGE_BASE_URL = "https://image.tmdb.org/t/p/w500"
+VITE_API_URL=https://flickly-backend.up.railway.app
